--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: Grant R. McDermott
 email: gmcdermott@ucsb.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Postdoctoral scholar
+  Bren School of Environmental Science and Management
+  University of California Santa Barbara
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://grantmcdermott.github.io/" # the base hostname & protocol for your site
 twitter_username: grant_mcdermott
