--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,5 +6,6 @@ Grant McDermott:
   bio: "Economics. Environment. Data. Postdoctoral scholar at UC Santa Barbara."
   avatar: mcdermott400sq.jpg
   twitter: grant_mcdermott
+  google_scholar: EruWDMwAAAAJ
   linkedin: grant-mcdermott-b8637419
   github: grantmcdermott
