Even more internal link fixes. Direct link to CV. Google analytics. Added Moro Rock header image for research tab.

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ owner:
   google_scholar: EruWDMwAAAAJ
   google:
     plus: #username
-    analytics:
+    analytics: UA-76482472-1
     verify:
     ad-client:
     ad-slot:
