--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   url: /research/
 
 - title: CV
-  url: /cv/
+  url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing #/cv/
 
 - title: Blog
   url: /blog/
