Forgot to uncomment site.url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Grant R. McDermott
 locale: en_US
-url: #http://grantmcdermott.github.io
+url: http://grantmcdermott.github.io
 
 
 # Jekyll configuration
