--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,8 @@ titlecase: true
 owner:
   name: Grant McDermott
   avatar: mcdermott400sq.jpg
-  bio: "Data. Economics. Environment."
-  email: gmcdermott@ucsb.edu
+  bio: "Economics.</br>Environment.</br>Data science."
+  email: gmcdermo@uoregon.edu
   disqus-shortname: grantmcdermott-blog
   twitter: grant_mcdermott
   facebook: #username
