Updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ owner:
   name: Grant McDermott
   avatar: mcdermott400sq.jpg
   bio: "Economics.</br>Environment.</br>Data science."
-  email: gmcdermo@uoregon.edu
+  email: grantmcd@uoregon.edu
   disqus-shortname: grantmcdermott-blog
   twitter: grant_mcdermott
   facebook: #username
