--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Grant R. McDermott
 locale: en_US
-#url: http://grantmcdermott.github.io
+url: http://grantmcdermott.github.io
 ## To build the website locally, comment out the previous line and run
 ## in terminal: 'bundle ex jekyll serve'. The website will be hosted at
 ## 'localhost:4000'.
@@ -47,7 +47,7 @@ titlecase: true
 owner:
   name: Grant McDermott
   avatar: mcdermott400sq.jpg
-  bio: "Economics.</br>Environment.</br>Data science."
+  bio: "Assistant Professor</br>Dept. of Economics</br>University of Oregon"
   email: grantmcd@uoregon.edu
   disqus-shortname: grantmcdermott-blog
   twitter: grant_mcdermott
