--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,9 +9,12 @@
 - title: Research
   url: /research/
 
+- title: Teaching
+  url: /teaching/
+
 - title: CV
   url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing
-  #url: /cv/ ## For the markdown version 
+  #url: /cv/ ## For the markdown version
 
 - title: Blog
   url: /blog/
