Vita moved to GH pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,9 +12,9 @@
 - title: Teaching
   url: /teaching/
 
-- title: CV
-  url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing
-  #url: /cv/ ## For the markdown version
+- title: Vita
+  #url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing
+  url: /vita/ ## For the markdown version
 
 - title: Blog
   url: /blog/
