--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@
 
 - title: Vita
   #url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing
-  url: /vita/ ## For the markdown version
+  url: /vita/
 
 - title: Blog
   url: /blog/
