Switch to gh-pages hosting of CV

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@
   url: /teaching/
 
 - title: Vita
-  #url: https://drive.google.com/file/d/0B6AgOxtQA9dTa25tZm9GNkZxNWc/edit?usp=sharing
-  url: /vita/
+  url: /vita/mcdermott-vita.pdf
+  #url: /vita/
 
 - title: Blog
   url: /blog/
