Old contact for author yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 
 Grant McDermott:
   name: Grant McDermott
-  email: gmcdermott@ucsb.edu
-  bio: "Economics. Environment. Data science. Postdoctoral scholar at UC Santa Barbara."
+  email: grantmcd@uoregon.edu
+  bio: "Environment economics and data science."
   avatar: mcdermott400sq.jpg
   twitter: grant_mcdermott
   google_scholar: EruWDMwAAAAJ
