--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Grant R. McDermott
 locale: en_US
-url: https://grantmcdermott.github.io
+url: https://grantmcdermott.com
 ## To build the website locally, comment out the previous line and run
 ## in terminal: 'bundle ex jekyll serve'. The website will be hosted at
 ## 'localhost:4000'.
