Out with the old, in with the even older

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ titlecase: true
 # Site owner
 owner:
   name: Grant McDermott
-  avatar: mcdermott400sq.jpg
+  avatar: mcdermott400sq-s.jpg
   bio: "Assistant Professor</br>Dept. of Economics</br>University of Oregon"
   email: grantmcd@uoregon.edu
   disqus-shortname: grantmcdermott-blog
