Add software section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@
   url: /vita/mcdermott-vita.pdf
   #url: /vita/
 
+- title: Software
+  url: /software/
+
 - title: Blog
   url: /blog/
-
-#- title: Theme Setup
-#  url: /theme-setup/
