Show post date by default

--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,7 @@ defaults:
       layout: single
       classes: wide
       author_profile: true
+      show_date: true
       read_time: true
       comments: true
       share: true
