--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ website:
       - research/index.qmd
       - teaching/index.qmd
       - text: Vita
-        href: https://grantmcdermott.com/vita/mcdermott-vita.pdf
+        href: https://grantmcdermott.com/vita/gmcd-vita.pdf
       - software/index.qmd
       - text: Blog
         href: posts/index.qmd
